@@ -54,8 +54,16 @@
 "Jz",
 "R",
 "X",
-"x",
 "Y",
-"y",
+"a",
+"b",
+"c",
+"f",
+"g",
+"h",
+"i",
+"n",
+"o",
 "p",
-"c"
+"s",
+"t"
